--- a/websites/blog.css
+++ b/websites/blog.css
@@ -6,9 +6,9 @@
 body{
     height: 100%;
     width: 100%;
-background: #2BC0E4;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #EAECC6, #2BC0E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #2BC0E4; 
+    background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4); 
+    background: linear-gradient(to right, #EAECC6, #2BC0E4); 
 
 }
 
@@ -188,9 +188,9 @@ a{
 
 /* Footer */
 .footer{
-    background: #c94b4b;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #4b134f, #c94b4b);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #4b134f, #c94b4b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #c94b4b; 
+    background: -webkit-linear-gradient(to right, #4b134f, #c94b4b); 
+    background: linear-gradient(to right, #4b134f, #c94b4b); 
      color: azure;
      width: 100%;
      text-align: center;
