Learned props and children,conditional rendering and state lifting

--- a/websites/React/IntroReact/react-project-one/src/index.css
+++ b/websites/React/IntroReact/react-project-one/src/index.css
@@ -7,7 +7,7 @@ p{
 
 
 body{
-  background-color: rgb(55,55,67);
+  background-color: rgb(104, 104, 123);
   color: white;
   font-size: 1rem; 
   padding: 2rem;
